Add generic Quester interface for QEvents and QPlayers