@@ -1,6 +1,7 @@
 package de.erethon.questsxl.dialogue;
 
 import de.erethon.questsxl.QuestsXL;
+import de.erethon.questsxl.common.Quester;
 import de.erethon.questsxl.error.FriendlyError;
 import de.erethon.questsxl.player.QPlayer;
 import org.bukkit.configuration.ConfigurationSection;
@@ -50,21 +51,22 @@ public class QDialogue {
                 QuestsXL.getInstance().getErrors().add(new FriendlyError(id, "Stage '" + key + "' konnte nicht geladen werden", "stage section is null", "Wahrscheinlich falsche Einrückung."));
                 continue;
             }
-            QDialogueStage stage = QDialogueStage.loadFromConfig(id + ", stage: " + key, stageSection);
-            if (stage != null) {
-                stages.add(stage);
-            }
+            QDialogueStage stage = new QDialogueStage(id + ", stage: " + key, stageSection);
+            stages.add(stage);
         }
     }
 
     public boolean canStart(QPlayer player) {
-        return stages.get(0).canStart(player);
+        return stages.getFirst().canStart(player);
     }
 
-    public ActiveDialogue start(QPlayer player) {
-        ActiveDialogue activeDialogue = new ActiveDialogue(player, this);
-        activeDialogue.start();
-        return activeDialogue;
+    public ActiveDialogue start(Quester quester) {
+        if (quester instanceof QPlayer player) {
+            ActiveDialogue activeDialogue = new ActiveDialogue(player, this);
+            activeDialogue.start();
+            return activeDialogue;
+        }
+        return null;
     }
 
     public String getName() {
